--- a/base_server/docs/패킷명세서.md
+++ b/base_server/docs/패킷명세서.md
@@ -35,13 +35,9 @@ class OTPInfo(BaseModel):
 
 class UserProfile(BaseModel):
     """사용자 투자 프로필"""
-    account_db_key: int = 0
-    platform_type: int = 1
     account_id: str = ""
     nickname: str = ""
     email: str = ""
-    account_level: int = 1
-    shard_id: int = 0
     investment_experience: str = "BEGINNER"  # BEGINNER, INTERMEDIATE, EXPERT
     risk_tolerance: str = "MODERATE"         # CONSERVATIVE, MODERATE, AGGRESSIVE  
     investment_goal: str = "GROWTH"          # GROWTH, INCOME, PRESERVATION
@@ -94,7 +90,6 @@ class AccountSignupRequest(BaseRequest):
 
 class AccountSignupResponse(BaseResponse):
     """회원가입 응답"""
-    account_db_key: int = 0
     user_id: str = ""
     message: str = ""
     next_step: str = "EMAIL_VERIFICATION"
@@ -164,13 +159,10 @@ class AccountLoginResponse(BaseResponse):
     """로그인 1단계 응답"""
     accessToken: str = ""  # OTP 미사용시 바로 발급
     temp_token: str = ""   # OTP 사용시 임시 토큰
-    account_db_key: int = 0
     nickname: str = ""
-    account_level: int = 1
-    shard_id: int = 0
-    account_info: Optional[Dict[str, Any]] = None
     requires_otp: bool = False
     profile_completed: bool = False
+    account_info: Optional[Dict[str, Any]] = None  # 내부 세션 생성용, 클라이언트 응답에서는 제거됨
 
 class AccountOTPLoginRequest(BaseRequest):
     """로그인 2단계 OTP 인증"""
@@ -181,11 +173,7 @@ class AccountOTPLoginResponse(BaseResponse):
     """로그인 2단계 OTP 인증 응답"""
     accessToken: str = ""
     refreshToken: str = ""
-    account_db_key: int = 0
     nickname: str = ""
-    account_level: int = 1
-    shard_id: int = 0
-    user_info: Optional[UserInfo] = None
     profile_completed: bool = False
 
 class AccountLogoutRequest(BaseRequest):
@@ -207,7 +195,6 @@ class AccountInfoRequest(BaseRequest):
 class AccountInfoResponse(BaseResponse):
     """계좌 정보 조회 응답"""
     account_info: Optional[AccountInfo] = None
-    shard_id: int = 0  # 디버깅용
 
 # ============================================================================
 # 프로필 설정 (사용자 정의 질문)
@@ -1399,11 +1386,7 @@ POST /api/account/login
     "sequence": 1001,
     "accessToken": "",  // OTP 필요시 빈값
     "temp_token": "temp_jwt_token",  // OTP 인증용
-    "account_db_key": 12345,
     "nickname": "투자왕",
-    "account_level": 1,
-    "shard_id": 1,
-    "account_info": null,
     "requires_otp": true,
     "profile_completed": true
 }
@@ -1423,15 +1406,7 @@ POST /api/account/otp-login
     "sequence": 1002, 
     "accessToken": "jwt_access_token",
     "refreshToken": "jwt_refresh_token",
-    "account_db_key": 12345,
     "nickname": "투자왕",
-    "account_level": 1,
-    "shard_id": 1,
-    "user_info": {
-        "user_id": "user123",
-        "email": "user@example.com",
-        "nickname": "투자왕"
-    },
     "profile_completed": true
 }
 ```
